@@ -28,9 +28,16 @@ import java.io.File;
 
 public class Bootstrapper {
 
+	private final ProtoObject metaClassMetaClass;
 	private final ProtoObject metaClass;
 	private final ProtoObject protoObject;
 	private final ProtoObject protoObjectMetaClass;
+	private final ProtoObject object;
+	private final ProtoObject objectMetaClass;
+	private final ProtoObject behavior;
+	private final ProtoObject behaviorMetaClass;
+	private final ProtoObject classDescription;
+	private final ProtoObject classDescriptionMetaClass;
 	private final ProtoObject cls;
 	private final ProtoObject clsMetaClass;
 	private final ProtoObject string;
@@ -41,6 +48,12 @@ public class Bootstrapper {
 	protected Bootstrapper(ProtoObject protoObject) {
 		this.protoObject = protoObject;
 		this.protoObjectMetaClass = new ProtoObject();
+		this.object = protoObject;
+		this.objectMetaClass = new ProtoObject();
+		this.behavior = new ProtoObject();
+		this.behaviorMetaClass = new ProtoObject();
+		this.classDescription = new ProtoObject();
+		this.classDescriptionMetaClass = new ProtoObject();
 		this.cls = new ProtoObject();
 		this.clsMetaClass = new ProtoObject();
 		this.symbol = new ProtoObject();
@@ -48,6 +61,7 @@ public class Bootstrapper {
 		this.string = new ProtoObject();
 		this.stringMetaClass = new ProtoObject();
 		this.metaClass = new ProtoObject();
+		this.metaClassMetaClass = new ProtoObject();
 	}
 
 	public void bootstrap() {
@@ -67,7 +81,14 @@ public class Bootstrapper {
 	}
 
 	private void markBootstrappedClasses() {
+		metaClassMetaClass.bootstrapped();
 		metaClass.bootstrapped();
+		object.bootstrapped();
+		objectMetaClass.bootstrapped();
+		behavior.bootstrapped();
+		behaviorMetaClass.bootstrapped();
+		classDescription.bootstrapped();
+		classDescriptionMetaClass.bootstrapped();
 		cls.bootstrapped();
 		clsMetaClass.bootstrapped();
 		symbol.bootstrapped();
@@ -81,7 +102,29 @@ public class Bootstrapper {
 		protoObjectMetaClass.superclass(cls);
 		protoObject.cls(protoObjectMetaClass);
 
+		objectMetaClass.cls(metaClass);
+		objectMetaClass.superclass(protoObjectMetaClass);
+		object.cls(objectMetaClass);
+		object.superclass(protoObject);
+
+		behaviorMetaClass.cls(metaClass);
+		behaviorMetaClass.superclass(objectMetaClass);
+		behavior.cls(behaviorMetaClass);
+		behavior.superclass(object);
+
+		classDescriptionMetaClass.cls(metaClass);
+		classDescriptionMetaClass.superclass(behaviorMetaClass);
+		classDescription.cls(classDescriptionMetaClass);
+		classDescription.superclass(behavior);
+
+		clsMetaClass.cls(metaClass);
+		clsMetaClass.superclass(classDescriptionMetaClass);
 		cls.cls(clsMetaClass);
+		cls.superclass(classDescription);
+
+		metaClassMetaClass.superclass(classDescriptionMetaClass);
+		metaClass.cls(metaClassMetaClass);
+		metaClass.superclass(classDescription);
 
 		stringMetaClass.cls(metaClass);
 		string.cls(stringMetaClass);
@@ -94,7 +137,10 @@ public class Bootstrapper {
 
 	private void registerClasses() {
 		ProtoObject.primitiveRegisterAs(protoObject, "st.redline.ProtoObject");
+		ProtoObject.primitiveRegisterAs(object, "st.redline.Object");
 		ProtoObject.primitiveRegisterAs(metaClass, "st.redline.MetaClass");
+		ProtoObject.primitiveRegisterAs(behavior, "st.redline.Behavior");
+		ProtoObject.primitiveRegisterAs(classDescription, "st.redline.ClassDescription");
 		ProtoObject.primitiveRegisterAs(cls, "st.redline.Class");
 		ProtoObject.primitiveRegisterAs(symbol, "st.redline.Symbol");
 		ProtoObject.primitiveRegisterAs(string, "st.redline.String");
